# Automacao_Grupos-de-Ofertas

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: coupon_urls.toml  discovery_profiles.toml  group_profiles.toml  selection_profiles.toml  shopee_catalog_profiles.toml
config/message_templates/: mae-e-bebe.txt  shopee.txt
docs/: 01_BACKLOG.md  affiliate-compliance.md  analise-operacional.md  architecture.md  catalog-quality.md  checklist-operacional-pre-chamada-real.md  ci.md  cli-messages.md  cli-rodadas.md  commit-pattern.md  confirmacao-endpoint-shopee.md  contrato-n8n-whatsapp.md  copy-guidelines.md  decisao-n8n-cloud-nativo.md  descobridor-geral.md  discovery-profiles.md  environment.md  fake-artifacts-inventory.md  fixture-anonimizada.md  fluxo-desenvolvimento.md  fluxo-operacional.md  google-planilhas-operacionais.md  group-profiles.md  local-json-storage.md  media-guidelines.md  n8n-arquitetura-multi-nicho.md  n8n-cloud-runner.md  n8n-validation.md  n8n-workflow-implementavel.md  n8n-workflow.md  objetivo-operacional.md  primeira-chamada-real-shopee.md  production-checklist.md  provider-fake-flow.md  real-http-diagnostic.md  regras-de-arquivos.md  resumo-operacional-atual.md  revisao-apis-marketplaces.md  runbook-n8n.md  scoring.md  (+10 more)
specs/: 001_catalog_ingestion.md  002_product_scoring.md  003_copywriter_agent.md  004_affiliate_link_converter.md  005_media_mapper.md  006_local_flow_orchestrator.md  README.md
tests/: test_amazon_gateway.py  test_amazon_mapper.py  test_amazon_provider.py  test_amazon_request.py  test_anonymize_payload_tool.py  test_anonymized_fixture_safety.py  test_capture_shopee_payload_tool.py  test_catalog_contract.py  test_catalog_registry.py  test_channel_adapters.py  test_cloud_runner.py  test_collector.py  test_compliance.py  test_copy_brief.py  test_copywriter.py  test_discovery_profiles.py  test_dispatch_artifact_cli.py  test_dispatch_execute_cli.py  test_endpoints.py  test_gateway_helper.py  test_gateway_limit.py  test_gateway_pagination.py  test_gateway_retry.py  test_gateway_retry_integration.py  test_group_cadence.py  test_group_eligibility.py  test_group_plan.py  test_group_plan_approval.py  test_group_plan_approval_summary.py  test_group_plan_format.py  test_group_plan_naming.py  test_group_plan_simulation.py  test_group_plan_simulation_approval.py  test_group_plan_simulation_approved_history.py  test_group_plan_simulation_history.py  test_group_plan_simulation_save_text.py  test_group_plan_simulation_text.py  test_group_plan_simulation_update_history.py  test_group_plan_validation.py  test_group_profiles.py  (+65 more)
(+205 files in other folders)
