[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofertas-bot"
version = "0.1.0"
description = "Curadoria e publicação controlada de ofertas de afiliados para grupos opt-in."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "artamaral" }]
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
ofertas-harness = "ofertas_bot.harness:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
