[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofertas-bot"
version = "0.1.0"
description = "Curadoria e publicação controlada de ofertas de afiliados para grupos opt-in."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "artamaral" }]
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
ofertas-harness = "ofertas_bot.harness:main"
ofertas-review-decide = "ofertas_bot.review_queue_cli:main"
ofertas-review-export = "ofertas_bot.review_queue_export_cli:main"
ofertas-review-gate = "ofertas_bot.review_queue_gate_cli:main"
ofertas-review-list = "ofertas_bot.review_queue_list_cli:main"
ofertas-review-summary = "ofertas_bot.review_queue_summary_cli:main"
ofertas-dispatch-build = "ofertas_bot.dispatch_artifact_cli:main"
ofertas-manifest-create = "ofertas_bot.publication_manifest_cli:main"
ofertas-manifest-validate = "ofertas_bot.publication_manifest_validate_cli:main"
ofertas-manifest-inspect = "ofertas_bot.local_manifest_inspect_cli:main"
ofertas-manifest-count = "ofertas_bot.local_manifest_count_cli:main"
ofertas-manifest-hash = "ofertas_bot.local_manifest_hash_cli:main"
ofertas-review-bundle = "ofertas_bot.local_review_bundle_cli:main"
ofertas-local-doctor = "ofertas_bot.local_artifacts_doctor_cli:main"
ofertas-local-flow = "ofertas_bot.local_flow_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
